@@ -127,18 +127,21 @@ function ob_sessrewrite($buffer)
 		</operation>
 
 		<operation>
-			<search position="replace"><![CDATA[
+			<search position="after"><![CDATA[
 	// This should work even in 4.2.x, just not CGI without cgi.fix_pathinfo.
-	if (!empty($modSettings['queryless_urls']) && (!$context['server']['is_cgi'] || @ini_get('cgi.fix_pathinfo') == 1) && $context['server']['is_apache'])
-	{
-		// Let's do something special for session ids!
-		if (defined('SID') && SID != '')
-			$buffer = preg_replace('/"' . preg_quote($scripturl, '/') . '\?(?:' . SID . ';)((?:board|topic)=[^#"]+?)(#[^"]*?)?"/e', "'\"' . \$scripturl . '/' . strtr('\$1', '&;=', '//,') . '.html?' . SID . '\$2\"'", $buffer);
-		else
-			$buffer = preg_replace('/"' . preg_quote($scripturl, '/') . '\?((?:board|topic)=[^#"]+?)(#[^"]*?)?"/e', "'\"' . \$scripturl . '/' . strtr('\$1', '&;=', '//,') . '.html\$2\"'", $buffer);
-	}
 ]]></search>
 			<add><![CDATA[
+/*	Pretty URLs says no!
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="after"><![CDATA[
+	// Return the changed buffer.
+]]></search>
+			<add><![CDATA[
+*/
+
 	//	Rewrite the buffer with Pretty URLs!
 	if ($modSettings['pretty_enable_filters'])
 	{
@@ -164,13 +167,9 @@ function ob_sessrewrite($buffer)
 	<file name="$sourcedir/Subs.php">
 		<operation>
 			<search position="replace"><![CDATA[
-function redirectexit($setLocation = '', $refresh = false)
-{
 	global $scripturl, $context, $modSettings, $db_show_debug, $db_cache;
 ]]></search>
 			<add><![CDATA[
-function redirectexit($setLocation = '', $refresh = false, $permanent = false)
-{
 	global $scripturl, $context, $modSettings, $db_show_debug, $db_cache, $sourcedir;
 ]]></add>
 		</operation>
@@ -184,9 +183,6 @@ function redirectexit($setLocation = '', $refresh = false, $permanent = false)
 		else
 			$setLocation = preg_replace('/^' . preg_quote($scripturl, '/') . '\?((?:board|topic)=[^#"]+?)(#[^"]*?)?$/e', "\$scripturl . '/' . strtr('\$1', '&;=', '//,') . '.html\$2'", $setLocation);
 	}
-
-	if (isset($modSettings['integrate_redirect']) && function_exists($modSettings['integrate_redirect']))
-		$modSettings['integrate_redirect']($setLocation, $refresh);
 ]]></search>
 			<add><![CDATA[
 	//	Redirections should be pretty too
@@ -206,12 +202,6 @@ function redirectexit($setLocation = '', $refresh = false, $permanent = false)
 		$setLocation = str_replace("\x12", '\'', $setLocation);
 		$setLocation = preg_replace(array('~;+|=;~', '~\?;~', '~\?#|;#|=#~', '~\?$|;$|#$|=$~'), array(';', '?', '#', ''), $setLocation);
 	}
-
-	if (isset($modSettings['integrate_redirect']) && function_exists($modSettings['integrate_redirect']))
-		$modSettings['integrate_redirect']($setLocation, $refresh);
-
-	if ($permanent)
-		header('HTTP/1.1 301 Moved Permanently');
 ]]></add>
 		</operation>
 	</file>
